src/test/deca/syntax/invalid/synt/floatsHex.deca
{
    float f = 0xAA.FFp+28f
    float r = 0xaf.bcp5
}
